--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">HelloAndroid</string>
+    <string name="app_name">HOF</string>
     <string name="todo">TODO</string>
-    <string name="udacity">Udacity</string>
-    <string name="_650_555_5555">650 555 5555</string>
-    <string name="www_udacity_com">www.udacity.com</string>
-    <string name="_2465_latham_st_mountain_view_ca_94043">2465 Latham St Mountain View, CA 94043</string>
+    <string name="hof_partnership">Hof Partnership</string>
+    <string name="phone_number">+90 546 482 95 02</string>
+    <string name="personal_website_address">www.fatihyilmaz.com.tr.ht/whoami</string>
+    <string name="address">Istanbul Turkey</string>
 </resources>
